--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,9 @@ django-cors-headers==4.9.0
 django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+Pillow==12.1.1
 psycopg==3.3.2
 psycopg-binary==3.3.2
 PyJWT==2.11.0
+qrcode==8.2
 sqlparse==0.5.5
