--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
         "pinia": "^3.0.4",
         "primeicons": "^7.0.0",
         "primevue": "^4.5.4",
-        "qrcode": "^1.5.4",
         "tailwindcss-primeui": "^0.6.0",
         "vue": "^3.4.34",
+        "vue-qrcode-reader": "^5.7.3",
         "vue-router": "^4.4.0"
     },
     "devDependencies": {
