--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework_simplejwt==5.5.1
 Pillow==12.1.1
 psycopg==3.3.2
 psycopg-binary==3.3.2
+python-decouple==3.8
 PyJWT==2.11.0
 pytesseract==0.3.13
 qrcode==8.2
