--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.11.1
+dj-database-url==3.1.2
 Django==6.0.2
 django-cors-headers==4.9.0
 django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==25.1.0
 Pillow==12.1.1
 psycopg==3.3.2
 psycopg-binary==3.3.2
@@ -12,3 +14,4 @@ PyJWT==2.11.0
 pytesseract==0.3.13
 qrcode==8.2
 sqlparse==0.5.5
+whitenoise==6.11.0
